# firmata-client

./: Cargo.toml  README.md
examples/: analog.rs  available.rs  blink.rs  blinkm_i2c.rs  button.rs  pwm.rs  servo.rs
src/: constants.rs  lib.rs
src/board/: mod.rs  poll.rs
src/connection_wrapper/: engine.rs  mod.rs  to_engine_command.rs
src/types/: error.rs  i2c_reply.rs  message.rs  mod.rs  pin.rs  result.rs
