[package]
name = "firmata-client-rs"
version = "0.5.0"
license = "MIT OR Apache-2.0"
authors = ["Brandon Walsh <metasophiea@gmail.com>"]
readme = "README.md"
description = "A Firmata protocol client library."
edition = "2021"

[dependencies]
serialport = "4.5.1"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"
