[package]
name = "firmata-client"
version = "0.7.0"
license = "MIT OR Apache-2.0"
authors = ["Brandon Walsh <metasophiea@gmail.com>"]
readme = "README.md"
description = "A Firmata protocol client library."
edition = "2021"
repository = "https://github.com/metasophiea/firmata-client"
keywords = ["firmata", "arduino", "robot", "microcontroller"]

[dependencies]
serialport = "4.6.0"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"
